playlist editor component added
