# app/swagger/swagger.yaml
@@ -326,7 +326,7 @@ paths:
           description: User is not logged in
 
   /account/playlist/delete:
-    post:
+    delete:
       tags: [delete_playlist]
       operationId: app.delete_playlist
       summary: delete playlist
@@ -334,10 +334,6 @@ paths:
         - name: playlist_id
           in: query
           type: integer
-        - name: user_token
-          in: body
-          schema:
-            $ref: '#/definitions/User_token'
       responses:
         200:
           description: Listed songs
